--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -3,9 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>Altseed2.Test</RootNamespace>
-    <OutputPath>../Build</OutputPath>
     <Platforms>x64</Platforms>
     <Configurations>Debug;Release;CI</Configurations>
+    <OutputPath>$(SolutionDir)Build/</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
