--- a/Nuget/Altseed2.nuspec
+++ b/Nuget/Altseed2.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Altseed2</id>
-        <version>0.0.2-alpha</version>
+        <version>0.0.3-alpha</version>
         <title>Altseed2</title>
         <authors>Altseed</authors>
         <licenseUrl>https://github.com/altseed/Altseed2-csharp/blob/master/LICENSE</licenseUrl>
@@ -20,6 +20,6 @@
         <file src="libAltseed2_Core.dylib" target="build\netstandard2.1\libAltseed2_Core.dylib" />
         <file src="libAltseed2_Core" target="build\netstandard2.1\libAltseed2_Core" />
         <file src="Altseed2.dll" target="lib\netstandard2.1\Altseed2.dll" />
-        <!-- <file src="Altseed2.xml" target="lib\netstandard2.1\Altseed2.xml" /> -->
+        <file src="Altseed2.xml" target="lib\netstandard2.1\Altseed2.xml" />
     </files>
 </package>
