--- a/Nuget/Altseed2.nuspec
+++ b/Nuget/Altseed2.nuspec
@@ -5,7 +5,7 @@
         <version>0.0.4-alpha</version>
         <title>Altseed2</title>
         <authors>Altseed</authors>
-        <licenseUrl>https://github.com/altseed/Altseed2-csharp/blob/master/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
         <projectUrl>https://github.com/altseed/Altseed2-csharp/</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>Altseed2はマルチプラットフォームな和製ゲームエンジンです。オブジェクト指向を用いて効率的にゲームを組み立てることができます。このパッケージにはゲームエンジンのライブラリ部分のみが含まれます。</description>
@@ -15,11 +15,11 @@
         <tags>Game</tags>
     </metadata>
     <files>
-        <file src="Altseed2.targets" target="build\netstandard2.1\Altseed2.targets" />
-        <file src="Altseed2_Core.dll" target="build\netstandard2.1\Altseed2_Core.dll" />
-        <file src="libAltseed2_Core.dylib" target="build\netstandard2.1\libAltseed2_Core.dylib" />
-        <file src="libAltseed2_Core" target="build\netstandard2.1\libAltseed2_Core" />
+        <file src="Altseed2_Core.dll" target="runtimes\win-x64\native\netstandard2.1\Altseed2_Core.dll" />
+        <file src="libAltseed2_Core.dylib" target="runtimes\osx-x64\native\netstandard2.1\libAltseed2_Core.dylib" />
+        <file src="libAltseed2_Core" target="runtimes\linux-x64\native\netstandard2.1\libAltseed2_Core" />
         <file src="Altseed2.dll" target="lib\netstandard2.1\Altseed2.dll" />
         <file src="Altseed2.xml" target="lib\netstandard2.1\Altseed2.xml" />
+        <file src="licenses\LICENSE.txt" target="" />
     </files>
 </package>
