--- a/TestForMacLinux/TestForMacLinux.csproj
+++ b/TestForMacLinux/TestForMacLinux.csproj
@@ -33,4 +33,15 @@
     <ProjectReference Include="..\Test\Test.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="..\Core\TestData\**\*.*" LinkBase="TestData" Visible="false">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\Core\TestData\Font\mplus-1m-regular.ttf" Visible="false">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
