--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,13 @@ jobs:
           cd test-windows
           dotnet TestForMacLinux.dll
 
+    - name: Upload artifact
+      continue-on-error: true
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: test-result
+        path: Build
+
   linux:
     runs-on: ubuntu-18.04
 
