--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         continue-on-error: true
         run: |
           cd test-windows
-          dotnet TestForMacLinux.dll
+          TestForMacLinux.exe
 
       - name: Upload artifact
         continue-on-error: true
