--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,11 +62,15 @@ jobs:
           ./TestForMacLinux.exe
 
       - name: Upload artifact
-        continue-on-error: true
         uses: actions/upload-artifact@v1.0.0
         with:
           name: test-result
           path: test-windows
+
+      - name: Compare tests
+        run: |
+          cd Scripts
+          python test_screenshot.py
 
   linux:
     runs-on: ubuntu-18.04
