--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Core"]
 	path = Core
 	url = https://github.com/altseed/altseed2.git
+[submodule "TestResult"]
+	path = TestResult
+	url = https://github.com/altseed/Altseed2-csharp-test-result.git
