--- a/NodeEditor/NodeEditor.csproj
+++ b/NodeEditor/NodeEditor.csproj
@@ -12,6 +12,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="System.Reactive" Version="5.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\Engine\Engine.csproj" />
 	</ItemGroup>
 
