--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,9 +148,15 @@ jobs:
       with:
         path: Core/build
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Core/core/**') }}
+    - name: Setup CMake
+      if: steps.cache-core.outputs.cache-hit != 'true'
+      uses: jwlawson/actions-setup-cmake@v1.4
+      with:
+        cmake-version: '3.18.x'
     - name: Build CMake
       if: steps.cache-core.outputs.cache-hit != 'true'
       run: |
+        cmake --version
         cd Core
         mkdir build
         cd build
