--- a/Tool/FilePackageGenerator/FilePackageGenerator.csproj
+++ b/Tool/FilePackageGenerator/FilePackageGenerator.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Altseed2.Tool.FilePackageGenerator</RootNamespace>
     <Platforms>x64</Platforms>
     <ApplicationIcon />
     <StartupObject />
-    <OutputPath>$(SolutionDir)Build/</OutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <OutputPath>$(SolutionDir)Build\$(Configuration)\</OutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
