--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Altseed2.Test</RootNamespace>
     <Platforms>x64</Platforms>
     <Configurations>Debug;Release;CI</Configurations>
-    <OutputPath>$(SolutionDir)Build/</OutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <OutputPath>$(SolutionDir)Build\$(Configuration)\</OutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
@@ -20,7 +19,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CI|x64'">
     <PlatformTarget>x64</PlatformTarget>
-    <DefineConstants>TRACE;CI</DefineConstants>
+    <Optimize>true</Optimize>
+    <DefineConstants>TRACE;CI;NET;NET5_0;NETCOREAPP</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
