--- a/TestForMacLinux/TestForMacLinux.csproj
+++ b/TestForMacLinux/TestForMacLinux.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Altseed2.TestForMacLinux</RootNamespace>
     <Platforms>x64</Platforms>
     <Configurations>Debug;Release;CI</Configurations>
-    <OutputPath>$(SolutionDir)Build/</OutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <OutputPath>$(SolutionDir)Build\$(Configuration)\</OutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
@@ -21,7 +20,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CI|x64'">
     <PlatformTarget>x64</PlatformTarget>
-    <DefineConstants>TRACE;CI</DefineConstants>
+    <Optimize>true</Optimize>
+    <DefineConstants>TRACE;CI;NET;NET5_0;NETCOREAPP</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
