--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.103
+        dotnet-version: 5.0.x
     - name: Build
       run: dotnet build Altseed2.sln --configuration CI
     - name: Upload artifact
@@ -115,14 +115,17 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.103
+        dotnet-version: 5.0.x
     - name: Build
-      run: dotnet build Altseed2.sln --configuration CI
+      run: |
+        dotnet build Altseed2.sln --configuration CI
+        mv Build/CI/net5.0/libAltseed2_Core.so Build/CI/net5.0/libAltseed2_Core
+        mv Build/Release/net5.0/libAltseed2_Core.so Build/Release/net5.0/libAltseed2_Core
+        mv Build/Release/netstandard2.1/libAltseed2_Core.so Build/Release/netstandard2.1/libAltseed2_Core
     - name: Test
       continue-on-error: true
       run: |
         cd Build/CI/net5.0
-        mv libAltseed2_Core.so libAltseed2_Core
         dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
@@ -132,7 +135,6 @@ jobs:
         path: Build
         
   macOS:
-
     runs-on: macos-latest
 
     steps:
@@ -165,7 +167,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.103
+        dotnet-version: 5.0.x
     - name: Build
       run: dotnet build Altseed2.sln --configuration CI
     - name: Test
