Remove net5.0 from Engine

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,12 +210,10 @@ jobs:
         run: |
           mkdir Altseed2
           mkdir Altseed2/netstandard2.1
-          mkdir Altseed2/net5.0
           
           cp Core/LICENSE Altseed2/
           cp test-windows/Release/Altseed2.xml Altseed2/.
-          cp test-windows/Release/netstandard2.1/Altseed2.dll Altseed2/netstandard2.1/.
-          cp test-windows/Release/net5.0/Altseed2.dll Altseed2/net5.0/.
+          cp test-windows/Release/netstandard2.1/Altseed2.dll Altseed2/.
           
           cp test-windows/Release/net5.0/Altseed2_Core.dll Altseed2/.
           cp test-mac/Release/net5.0/libAltseed2_Core.dylib Altseed2/.
