--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -18,7 +18,7 @@
     <Copyright>Copyright © 2020 Altseed</Copyright>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
-    <InformationalVersion>2.0.0-beta4</InformationalVersion>
+    <InformationalVersion>2.0.0</InformationalVersion>
   </PropertyGroup>
 
   <Choose>
