--- a/Tool/Altseed2.Tools/Altseed2.Tools.csproj
+++ b/Tool/Altseed2.Tools/Altseed2.Tools.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CI|x64'">
+  <PropertyGroup Condition="'$(Configuration)'=='CI'">
     <Optimize>true</Optimize>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)'=='CI'">
-    <None Include="LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)"/>
+    <None Include="LICENSE.txt" Pack="true" PackagePath=""/>
 
     <Reference Include="Altseed2.dll" />
 
