Add parallel move arrows

--- a/NodeEditor/NodeEditor.csproj
+++ b/NodeEditor/NodeEditor.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Engine\Engine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GUIManipulator\" />
+  </ItemGroup>
+
 </Project>
